Add 5 featured projects with enhanced styling

--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
                 <h2 class="section-title">Featured <span class="gradient-text">Projects</span></h2>
             </div>
             <div class="projects-grid">
+                <!-- Featured: Automated Trading Bot -->
                 <div class="project-card featured">
                     <div class="project-image">
                         <div class="project-overlay">
@@ -291,16 +292,26 @@
                         </div>
                     </div>
                     <div class="project-content">
-                        <span class="project-tag">Crypto</span>
+                        <span class="project-tag">Crypto Trading</span>
                         <h3>Automated Trading Bot</h3>
-                        <p>A sophisticated trading bot for crypto markets with automated strategies, real-time market analysis, and risk management features.</p>
+                        <p>High-frequency trading bot with real-time market analysis, multiple exchange support, advanced risk management, and automated profit-taking strategies. Features include backtesting, paper trading mode, and Telegram notifications.</p>
                         <div class="project-tech">
                             <span>Go</span>
-                            <span>APIs</span>
                             <span>WebSocket</span>
+                            <span>REST APIs</span>
+                            <span>Redis</span>
+                            <span>Docker</span>
                         </div>
+                        <ul class="project-features">
+                            <li><i class="fas fa-check"></i> Multi-exchange support (Binance, Bybit)</li>
+                            <li><i class="fas fa-check"></i> Real-time price monitoring</li>
+                            <li><i class="fas fa-check"></i> Automated stop-loss & take-profit</li>
+                            <li><i class="fas fa-check"></i> Performance analytics dashboard</li>
+                        </ul>
                     </div>
                 </div>
+
+                <!-- Flutter Crypto Wallet App -->
                 <div class="project-card">
                     <div class="project-image">
                         <div class="project-overlay">
@@ -314,20 +325,23 @@
                             </div>
                         </div>
                         <div class="project-icon">
-                            <i class="fas fa-mobile-alt"></i>
+                            <i class="fas fa-wallet"></i>
                         </div>
                     </div>
                     <div class="project-content">
-                        <span class="project-tag">Mobile</span>
-                        <h3>Flutter Finance App</h3>
-                        <p>Cross-platform mobile application for tracking crypto portfolios and market trends.</p>
+                        <span class="project-tag">Flutter</span>
+                        <h3>Crypto Wallet App</h3>
+                        <p>Secure multi-chain crypto wallet with biometric authentication, real-time portfolio tracking, and seamless token swaps.</p>
                         <div class="project-tech">
                             <span>Flutter</span>
                             <span>Dart</span>
+                            <span>Web3</span>
                             <span>Firebase</span>
                         </div>
                     </div>
                 </div>
+
+                <!-- Flutter E-Commerce App -->
                 <div class="project-card">
                     <div class="project-image">
                         <div class="project-overlay">
@@ -341,44 +355,78 @@
                             </div>
                         </div>
                         <div class="project-icon">
-                            <i class="fas fa-cubes"></i>
+                            <i class="fas fa-shopping-bag"></i>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <span class="project-tag">Flutter</span>
+                        <h3>E-Commerce Mobile App</h3>
+                        <p>Full-featured shopping app with smooth animations, cart management, payment integration, and order tracking.</p>
+                        <div class="project-tech">
+                            <span>Flutter</span>
+                            <span>Provider</span>
+                            <span>Stripe</span>
+                            <span>Node.js</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- DeFi Dashboard -->
+                <div class="project-card">
+                    <div class="project-image">
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="https://github.com/hritthikroy" target="_blank" class="project-link">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                                <a href="#" class="project-link">
+                                    <i class="fas fa-external-link-alt"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="project-icon">
+                            <i class="fas fa-chart-line"></i>
                         </div>
                     </div>
                     <div class="project-content">
                         <span class="project-tag">Web3</span>
-                        <h3>DeFi Dashboard</h3>
-                        <p>Web3 dashboard for monitoring DeFi protocols, yield farming, and liquidity pools.</p>
+                        <h3>DeFi Analytics Dashboard</h3>
+                        <p>Real-time DeFi dashboard for monitoring yield farming positions, liquidity pools, and portfolio performance across chains.</p>
                         <div class="project-tech">
                             <span>React</span>
                             <span>Web3.js</span>
-                            <span>Ethereum</span>
+                            <span>Ethers.js</span>
+                            <span>Chart.js</span>
                         </div>
                     </div>
                 </div>
+
+                <!-- Portfolio Website -->
                 <div class="project-card">
                     <div class="project-image">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="https://github.com/hritthikroy" target="_blank" class="project-link">
+                                <a href="https://github.com/hritthikroy/My-Portfolio" target="_blank" class="project-link">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="#" class="project-link">
+                                <a href="https://hritthik.me" target="_blank" class="project-link">
                                     <i class="fas fa-external-link-alt"></i>
                                 </a>
                             </div>
                         </div>
                         <div class="project-icon">
-                            <i class="fas fa-cogs"></i>
+                            <i class="fas fa-palette"></i>
                         </div>
                     </div>
                     <div class="project-content">
-                        <span class="project-tag">Automation</span>
-                        <h3>Task Automation Suite</h3>
-                        <p>Collection of automation scripts and tools for streamlining development workflows.</p>
+                        <span class="project-tag">Frontend</span>
+                        <h3>Portfolio Website</h3>
+                        <p>Modern, animated portfolio with glassmorphism design, smooth scroll animations, and interactive 3D effects.</p>
                         <div class="project-tech">
-                            <span>Node.js</span>
-                            <span>Python</span>
-                            <span>Shell</span>
+                            <span>HTML5</span>
+                            <span>CSS3</span>
+                            <span>JavaScript</span>
+                            <span>GSAP</span>
                         </div>
                     </div>
                 </div>
