Enhance contact section with more text and availability badge

--- a/index.html
+++ b/index.html
@@ -453,6 +453,15 @@
                         I'm always open for collaborations and interesting projects. 
                         Whether you have a question or just want to say hi, feel free to reach out!
                     </p>
+                    <p class="contact-details">
+                        Currently available for freelance work, full-time opportunities, and exciting startup projects. 
+                        I specialize in building automated trading systems, cross-platform mobile apps, and Web3 solutions. 
+                        Let's turn your ideas into reality together!
+                    </p>
+                    <div class="contact-availability">
+                        <span class="availability-dot"></span>
+                        <span>Available for new projects</span>
+                    </div>
                     <div class="contact-methods">
                         <a href="mailto:hello@hritthikroy.com" class="contact-method">
                             <i class="fas fa-envelope"></i>
