Replace E-Commerce app with Elegant Software project

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                     </div>
                 </div>
 
-                <!-- Flutter E-Commerce App -->
+                <!-- Elegant Software -->
                 <div class="project-card">
                     <div class="project-image">
                         <div class="project-overlay">
@@ -355,18 +355,18 @@
                             </div>
                         </div>
                         <div class="project-icon">
-                            <i class="fas fa-shopping-bag"></i>
+                            <i class="fas fa-gem"></i>
                         </div>
                     </div>
                     <div class="project-content">
-                        <span class="project-tag">Flutter</span>
-                        <h3>E-Commerce Mobile App</h3>
-                        <p>Full-featured shopping app with smooth animations, cart management, payment integration, and order tracking.</p>
+                        <span class="project-tag">Software</span>
+                        <h3>Elegant Software</h3>
+                        <p>Beautifully crafted software solutions with clean architecture, intuitive interfaces, and seamless user experiences.</p>
                         <div class="project-tech">
-                            <span>Flutter</span>
-                            <span>Provider</span>
-                            <span>Stripe</span>
-                            <span>Node.js</span>
+                            <span>Clean Code</span>
+                            <span>UI/UX</span>
+                            <span>Performance</span>
+                            <span>Scalable</span>
                         </div>
                     </div>
                 </div>
