Replace with Eloquent voice-to-text project

--- a/index.html
+++ b/index.html
@@ -341,32 +341,32 @@
                     </div>
                 </div>
 
-                <!-- Elegant Software -->
+                <!-- Eloquent - Voice to Text -->
                 <div class="project-card">
                     <div class="project-image">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="https://github.com/hritthikroy" target="_blank" class="project-link">
+                                <a href="https://github.com/hritthikroy/Eloquent" target="_blank" class="project-link">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="#" class="project-link">
+                                <a href="https://github.com/hritthikroy/Eloquent" target="_blank" class="project-link">
                                     <i class="fas fa-external-link-alt"></i>
                                 </a>
                             </div>
                         </div>
                         <div class="project-icon">
-                            <i class="fas fa-gem"></i>
+                            <i class="fas fa-microphone-alt"></i>
                         </div>
                     </div>
                     <div class="project-content">
-                        <span class="project-tag">Software</span>
-                        <h3>Elegant Software</h3>
-                        <p>Beautifully crafted software solutions with clean architecture, intuitive interfaces, and seamless user experiences.</p>
+                        <span class="project-tag">macOS App</span>
+                        <h3>Eloquent</h3>
+                        <p>Professional voice-to-text application for macOS with AI enhancement, keyboard shortcuts, and seamless auto-paste functionality.</p>
                         <div class="project-tech">
-                            <span>Clean Code</span>
-                            <span>UI/UX</span>
-                            <span>Performance</span>
-                            <span>Scalable</span>
+                            <span>Electron</span>
+                            <span>JavaScript</span>
+                            <span>AI</span>
+                            <span>macOS</span>
                         </div>
                     </div>
                 </div>
