--- a/index.html
+++ b/index.html
@@ -401,32 +401,32 @@
                     </div>
                 </div>
 
-                <!-- Portfolio Website -->
+                <!-- Proxy Validator -->
                 <div class="project-card">
                     <div class="project-image">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="https://github.com/hritthikroy/My-Portfolio" target="_blank" class="project-link">
+                                <a href="https://github.com/hritthikroy/Proxy-validator" target="_blank" class="project-link">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="https://hritthik.me" target="_blank" class="project-link">
+                                <a href="https://github.com/hritthikroy/Proxy-validator" target="_blank" class="project-link">
                                     <i class="fas fa-external-link-alt"></i>
                                 </a>
                             </div>
                         </div>
                         <div class="project-icon">
-                            <i class="fas fa-palette"></i>
+                            <i class="fas fa-shield-alt"></i>
                         </div>
                     </div>
                     <div class="project-content">
-                        <span class="project-tag">Frontend</span>
-                        <h3>Portfolio Website</h3>
-                        <p>Modern, animated portfolio with glassmorphism design, smooth scroll animations, and interactive 3D effects.</p>
+                        <span class="project-tag">Tool</span>
+                        <h3>Proxy Validator</h3>
+                        <p>Fast and efficient proxy validation tool to test, verify, and filter working proxies with speed testing and anonymity checks.</p>
                         <div class="project-tech">
-                            <span>HTML5</span>
-                            <span>CSS3</span>
-                            <span>JavaScript</span>
-                            <span>GSAP</span>
+                            <span>Python</span>
+                            <span>Async</span>
+                            <span>Networking</span>
+                            <span>CLI</span>
                         </div>
                     </div>
                 </div>
