Replace Crypto Wallet with Crypto News Portal

--- a/index.html
+++ b/index.html
@@ -311,32 +311,32 @@
                     </div>
                 </div>
 
-                <!-- Flutter Crypto Wallet App -->
+                <!-- Crypto News Portal -->
                 <div class="project-card">
                     <div class="project-image">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="https://github.com/hritthikroy" target="_blank" class="project-link">
+                                <a href="https://github.com/hritthikroy/crypto-news-portal" target="_blank" class="project-link">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="#" class="project-link">
+                                <a href="https://github.com/hritthikroy/crypto-news-portal" target="_blank" class="project-link">
                                     <i class="fas fa-external-link-alt"></i>
                                 </a>
                             </div>
                         </div>
                         <div class="project-icon">
-                            <i class="fas fa-wallet"></i>
+                            <i class="fas fa-newspaper"></i>
                         </div>
                     </div>
                     <div class="project-content">
-                        <span class="project-tag">Flutter</span>
-                        <h3>Crypto Wallet App</h3>
-                        <p>Secure multi-chain crypto wallet with biometric authentication, real-time portfolio tracking, and seamless token swaps.</p>
+                        <span class="project-tag">Web App</span>
+                        <h3>Crypto News Portal</h3>
+                        <p>Real-time cryptocurrency news aggregator with live market updates, trending coins, and curated news from top crypto sources.</p>
                         <div class="project-tech">
-                            <span>Flutter</span>
-                            <span>Dart</span>
-                            <span>Web3</span>
-                            <span>Firebase</span>
+                            <span>React</span>
+                            <span>APIs</span>
+                            <span>Crypto</span>
+                            <span>Real-time</span>
                         </div>
                     </div>
                 </div>
