Add typewriter animation to code block in hero section

--- a/index.html
+++ b/index.html
@@ -86,13 +86,8 @@
                         <span class="window-title">developer.js</span>
                     </div>
                     <div class="window-content">
-                        <pre><code><span class="code-keyword">const</span> <span class="code-variable">developer</span> = {
-  <span class="code-property">name</span>: <span class="code-string">"Hritthik Roy"</span>,
-  <span class="code-property">role</span>: <span class="code-string">"Full Stack Developer"</span>,
-  <span class="code-property">skills</span>: [<span class="code-string">"Go"</span>, <span class="code-string">"JS"</span>, <span class="code-string">"Dart"</span>],
-  <span class="code-property">passion</span>: <span class="code-string">"Crypto & Fintech"</span>,
-  <span class="code-property">motto</span>: <span class="code-string">"Automate Everything!"</span>
-};</code></pre>
+                        <pre><code id="code-typewriter"></code></pre>
+                        <span class="code-cursor">|</span>
                     </div>
                 </div>
             </div>
